--- a/App.config
+++ b/App.config
@@ -17,9 +17,6 @@
             <setting name="enableMessageBoxes" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="logRclone" serializeAs="String">
-                <value>False</value>
-            </setting>
             <setting name="firstRun" serializeAs="String">
                 <value>True</value>
             </setting>
@@ -54,7 +51,7 @@
                 <value>White</value>
             </setting>
             <setting name="FontStyle" serializeAs="String">
-                <value>Microsoft Sans Serif, 9.2pt, style=Bold</value>
+                <value>Microsoft Sans Serif, 11.25pt</value>
             </setting>
             <setting name="BackPicturePath" serializeAs="String">
                 <value />
@@ -64,6 +61,9 @@
             </setting>
             <setting name="BandwithLimit" serializeAs="String">
                 <value />
+            </setting>
+            <setting name="BigFontStyle" serializeAs="String">
+                <value>Microsoft Sans Serif, 16pt</value>
             </setting>
         </AndroidSideloader.Properties.Settings>
         <AndroidADB.Sideloader.Properties.Settings>
